<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pure_white"
    tools:context=".VendorAddProduct">

    <ImageView
        android:id="@+id/logo_vendor_add_product_activity"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/logo_content_description"
        app:layout_constraintBottom_toTopOf="@+id/product_image_upload_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.609"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/product_image_upload_container"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/login_info_entry_box_background"
        android:contentDescription="@string/vendor_product_image_upload_text"
        android:paddingTop="80dp"
        android:paddingBottom="80dp"
        app:layout_constraintBottom_toTopOf="@+id/vendor_add_product_product_name_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="284dp"
        app:layout_constraintHeight_min="50dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_max="284dp"
        app:layout_constraintWidth_min="50dp"
        app:srcCompat="@drawable/uploadphoto" />

    <EditText
        android:id="@+id/vendor_add_product_product_name_input"
        android:layout_width="284dp"
        android:layout_height="60dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/login_info_entry_box_background"
        android:ems="10"
        android:fontFamily="@font/mundial_light"
        android:gravity="start|center_vertical"
        android:hint="@string/vendor_add_product_name_input_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/dark_gray"
        android:textColorHint="@color/dark_gray"
        android:textColorLink="@color/dark_blue"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/vendor_add_product_price_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/vendor_add_product_price_input"
        android:layout_width="284dp"
        android:layout_height="60dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/login_info_entry_box_background"
        android:ems="10"
        android:fontFamily="@font/mundial_light"
        android:gravity="start|center_vertical"
        android:hint="@string/vendor_add_product_price_input_hint"
        android:inputType="number|numberDecimal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/dark_gray"
        android:textColorHint="@color/dark_gray"
        android:textColorLink="@color/dark_blue"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/vendor_add_product_description_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/vendor_add_product_description_input"
        android:layout_width="284dp"
        android:layout_height="60dp"
        android:background="@drawable/login_info_entry_box_background"
        android:ems="10"
        android:fontFamily="@font/mundial_light"
        android:gravity="start|center_vertical"
        android:hint="@string/vendor_add_product_description_input_hint"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/dark_gray"
        android:textColorHint="@color/dark_gray"
        android:textColorLink="@color/dark_blue"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/vendor_add_product_activity_invalid_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/vendor_add_product_activity_invalid_error"
        android:layout_width="393dp"
        android:layout_height="36dp"
        android:ems="10"
        android:fontFamily="@font/mundial_regular"
        android:gravity="center"
        android:text="@string/setup_activity_invalid_error_text"
        android:textColor="@color/red"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/button_vendor_add_product_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_vendor_add_product_activity"
        android:layout_width="284dp"
        android:layout_height="60dp"
        android:layout_marginBottom="56dp"
        android:background="@drawable/entry_button_background"
        android:fontFamily="@font/mundial_demibold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/vendor_add_product_button_text"
        android:textAllCaps="false"
        android:textColor="@color/pure_white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>